crates/rome_formatter/tests/specs/prettier/range/reversed-range.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: reversed-range.js

---
# Input
```js
foo = 1.0000;<<<PRETTIER_RANGE_END>>>bar = 1.0000;<<<PRETTIER_RANGE_START>>>baz=1.0000;
// The range will be 26~13, should not format anything

```

# Output
```js
foo = 1.0000;
<<<PRETTIER_RANGE_END>>>bar = 1.0000
<<<PRETTIER_RANGE_START>>>baz=1.0000// The range will be 26~13, should not format anything

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_END>>>bar = 1.0000'
  ┌─ reversed-range.js:1:14
  │
1 │ foo = 1.0000;<<<PRETTIER_RANGE_END>>>bar = 1.0000;<<<PRETTIER_RANGE_START>>>baz=1.0000;
  │              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_START>>>baz=1.0000'
  ┌─ reversed-range.js:1:51
  │
1 │ foo = 1.0000;<<<PRETTIER_RANGE_END>>>bar = 1.0000;<<<PRETTIER_RANGE_START>>>baz=1.0000;
  │                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here


```


